Adding a personalize welcome message

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<title>Learn JavaScript</title>
 </head>
 <body>
+	<h1></h1>
+	<button type="button">Chnage user</button>
 	
 	<script src="main.js"></script>
 </body>
