--- a/index.html
+++ b/index.html
@@ -1,33 +1,33 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Learn JavaScript</title>
-</head>
-<body>
-
-	<!--
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Learn JavaScript</title>
+  </head>
+  <body>
+    <!--
 	<h1></h1>
 	<button type="button">Change user</button>
 	-->
 
-	<form action="" name="selectForm">
-		<p>
-			<label for="musicType">choose some music types, then click the button below</label>
-			<select name="musicType" id="musicType" multiple="multiple">
-				<option selected="selected">R&B</option>
-				<option>Jazz</option>
-				<option>Blues</option>
-				<option>New Age</option>
-			</select>
-		</p>
-		<p>
-			<input type="button" id="btn" value="How many are selected">
-		</p>
-	</form>
+    <form action="" name="selectForm">
+      <p>
+        <label for="musicType"
+          >choose some music types, then click the button below</label
+        >
+        <select name="musicType" id="musicType" multiple="multiple">
+          <option selected="selected">R&B</option>
+          <option>Jazz</option>
+          <option>Blues</option>
+          <option>New Age</option>
+        </select>
+      </p>
+      <p>
+        <input type="button" id="btn" value="How many are selected" />
+      </p>
+    </form>
 
-	
-	<script src="main.js"></script>
-</body>
+    <script src="app.js"></script>
+  </body>
 </html>
