--- a/index.html
+++ b/index.html
@@ -6,27 +6,27 @@
     <title>Learn JavaScript</title>
   </head>
   <body>
-    <!--
-	<h1></h1>
-	<button type="button">Change user</button>
-	-->
-
-    <form action="" name="selectForm">
-      <p>
-        <label for="musicType"
-          >choose some music types, then click the button below</label
-        >
-        <select name="musicType" id="musicType" multiple="multiple">
-          <option selected="selected">R&B</option>
-          <option>Jazz</option>
-          <option>Blues</option>
-          <option>New Age</option>
-        </select>
-      </p>
-      <p>
-        <input type="button" id="btn" value="How many are selected" />
-      </p>
-    </form>
+    <div class="area">
+      <div
+        id="container"
+        class="container"
+        style="
+          background-color: paleturquoise;
+          width: 600px;
+          margin: 0 auto;
+          padding: 30px;
+        "
+      >
+        <h1 id="heading">This is Heading Tag</h1>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corrupti
+          explicabo nulla sunt ratione, omnis neque quam. Corporis modi nulla
+          iusto labore vero! Laboriosam omnis dolorum vel ut qui odio libero.
+        </p>
+        <button id="login">Login</button>
+        <button id="signup">Signup</button>
+      </div>
+    </div>
 
     <script src="app.js"></script>
   </body>
