--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Learn JavaScript</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <div class="area">
+    <!-- <div class="area">
       <div
         id="container"
         class="container"
@@ -26,8 +27,10 @@
         <button id="login">Login</button>
         <button id="signup">Signup</button>
       </div>
-    </div>
+    </div> -->
 
-    <script src="app.js"></script>
+    <div id="root"></div>
+
+    <script src="./dist/bundle.js"></script>
   </body>
 </html>
