--- a/index.html
+++ b/index.html
@@ -29,7 +29,13 @@
       </div>
     </div> -->
 
-    <div id="root"></div>
+    <!-- <div id="root"></div> -->
+    <div class="container">
+      <button class="btn btn-success" id="newContact">
+        Create New Contact
+      </button>
+      <div id="output"></div>
+    </div>
 
     <script src="./dist/bundle.js"></script>
   </body>
